# learnGL

./: CMakeLists.txt  Makefile  compile.sh  fragment.glsl
include/: camera.h  memory_stats.h  shader.h
src/: CMakeLists.txt  a.out  compile.sh  glad.c  hello_square.cpp  main.cpp
